<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_20sdp"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/five"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_no_internet"
            tools:ignore="VectorDrawableCompat" />

        <com.seatup.widgets.DTextView
            android:id="@+id/textviewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:text="@string/title_no_internet"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.seatup.widgets.DTextView
            android:id="@+id/textviewMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/_2sdp"
            android:lineSpacingMultiplier="1"
            android:minLines="2"
            android:paddingLeft="@dimen/five"
            android:paddingRight="@dimen/five"
            android:text="@string/msg_no_internet"
            android:textSize="@dimen/_10sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten"
        android:layout_marginBottom="@dimen/ten"
        android:gravity="center"
        android:orientation="horizontal">

        <com.seatup.widgets.DTextView
            android:id="@+id/buttonAccept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:visibility="visible" />
    </LinearLayout>

</LinearLayout>