<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signin_bg"
    tools:context="com.seatup.activity.Login">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/twentyfive"
        android:layout_marginTop="@dimen/thirty"
        android:orientation="vertical">

        <com.seatup.widgets.DTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/extralargesize"
            app:textFontFace="BOLD" />

        <View
            android:layout_width="@dimen/fifty"
            android:layout_height="@dimen/three"
            android:layout_marginLeft="@dimen/three"
            android:layout_marginTop="@dimen/five"
            android:background="@color/white"
            android:padding="@dimen/two" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/twentyfive"
        android:layout_marginRight="@dimen/twentyfive"
        android:layout_marginBottom="@dimen/thirty"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ten"
            android:background="@drawable/bg_editext"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/twenty"
                android:layout_height="@dimen/twenty"
                app:srcCompat="@drawable/ic_mail" />

            <com.seatup.widgets.DEditText
                android:id="@+id/etEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@null"
                android:hint="@string/email_id"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingTop="@dimen/ten"
                android:paddingBottom="@dimen/ten"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/mediumsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/twenty"
            android:background="@drawable/bg_editext"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/twenty"
                android:layout_height="@dimen/twenty"
                app:srcCompat="@drawable/ic_passwword" />

            <com.seatup.widgets.DEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@null"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingTop="@dimen/ten"
                android:paddingBottom="@dimen/ten"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/mediumsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/twenty"
            android:gravity="center"
            android:orientation="horizontal">

            <com.seatup.widgets.DTextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_weight="1"
                android:paddingTop="@dimen/ten"
                android:paddingBottom="@dimen/ten"
                android:text="@string/forgot_paassword"
                android:textColor="@color/white"
                android:textSize="@dimen/smallsize" />

            <ImageView
                android:id="@+id/ivSignIn"
                android:layout_width="@dimen/fifty"
                android:layout_height="@dimen/fifty"
                android:background="@drawable/bg_white"
                android:padding="@dimen/ten"
                app:srcCompat="@drawable/ic_launcher" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/thirty"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/seventy"
                android:layout_height="@dimen/one"
                android:layout_marginLeft="@dimen/two"
                android:background="@color/whiteTransperent"
                android:padding="@dimen/two" />

            <com.seatup.widgets.DTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/ten"
                android:paddingRight="@dimen/ten"
                android:singleLine="true"
                android:text="@string/or"
                android:textColor="@color/white"
                android:textSize="@dimen/smallsize" />

            <View
                android:layout_width="@dimen/seventy"
                android:layout_height="@dimen/one"
                android:layout_marginLeft="@dimen/two"
                android:background="@color/whiteTransperent"
                android:padding="@dimen/two" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ten"
            android:layout_marginBottom="@dimen/ten"
            android:gravity="center"

            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivGoogleSignIn"
                android:layout_width="@dimen/fourty"
                android:layout_height="@dimen/fourty"
                android:layout_marginLeft="@dimen/twenty"
                android:background="@drawable/bg_gmail"
                android:padding="@dimen/seven"
                app:srcCompat="@drawable/ic_googleplus" />


            <ImageView
                android:id="@+id/ivFacebookSignIn"
                android:layout_width="@dimen/fourty"
                android:layout_height="@dimen/fourty"
                android:layout_marginLeft="@dimen/twenty"
                android:background="@drawable/bg_facebbook"
                android:padding="@dimen/ten"
                app:srcCompat="@drawable/ic_facebook" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/laySignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fifteen"
            android:gravity="center"
            android:orientation="horizontal">

            <com.seatup.widgets.DTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/white"
                android:textSize="@dimen/smallsize" />

            <com.seatup.widgets.DTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/five"
                android:singleLine="true"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/smallsize"
                app:textFontFace="BOLD" />


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
